JumpScript/tests/baselines/reference/parserUnterminatedGeneric1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.jump(2,23): error TS2304: Cannot find name 'IPromise'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.jump(2,45): error TS2304: Cannot find name 'IPromise'.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.jump(2,54): error TS1005: '>' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.jump (3 errors) ====
     interface IQService {
            all(promises: IPromise < any > []): IPromise<
                          ~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.
                                                ~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.
                                                         
!!! error TS1005: '>' expected.